# shells

./: README.md
da/: flake.nix  metric-learn.nix
da/macos/: .flake.nix.swp  flake.nix  tqdm.nix
da/macos/pytorch/: default.nix
latex/: flake.nix
poetry/: flake.nix  pyproject.toml
